# RTSoftSummerSchool2021-practice

./: CMakeLists.txt  README.md  meson.build
src/: CarController.hpp  IgnoringMovingStrategy.hpp  LineDetection.cpp  LineDetection.hpp  LineDetector.cpp  LineDetector.hpp  MovingStrategy.hpp  PrintingMovingStrategy.hpp  main.cpp
